# IcyMoon

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  conanfile.py
applications/anari/: CMakeLists.txt  anari.cpp  anari_camera.cpp  anari_camera.h  anari_camera_imgui_listener.cpp  anari_camera_imgui_listener.h  anari_dem_surface_generator.cpp  anari_dem_surface_generator.h  anari_frame_pipeline.cpp  anari_frame_pipeline.h  anari_map_camera.cpp  anari_map_camera.h  dem_block_sampler.h  gdal_dem_loader.cpp  gdal_dem_loader.h  im3e_anari_viewer.cpp
im3e/anari/: CMakeLists.txt  anari.h
im3e/anari/src/: anari_device.cpp  anari_device.h  anari_engine.cpp  anari_extension_utility.cpp  anari_frame_pipeline.cpp  anari_frame_pipeline.h  anari_height_field.cpp  anari_height_field.h  anari_height_field_tile.cpp  anari_height_field_tile.h  anari_instance_set.cpp  anari_instance_set.h  anari_map_camera.cpp  anari_map_camera.h  anari_plane.cpp  anari_plane.h  anari_renderer.cpp  anari_renderer.h  anari_utils.h  anari_world.cpp  anari_world.h
im3e/api/: CMakeLists.txt  anari.h  camera.h  command_buffer.h  device.h  frame_pipeline.h  gui.h  height_map.h  image.h  logger.h  vulkan_functions.h  vulkan_loader.h  window.h
im3e/devices/: CMakeLists.txt  devices.h
im3e/devices/src/: device.cpp  device.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_buffers.cpp  vulkan_command_buffers.h  vulkan_command_queue.cpp  vulkan_debug_message_handler.cpp  vulkan_debug_message_handler.h  vulkan_device.cpp  vulkan_device.h  vulkan_extensions.cpp  vulkan_extensions.h  vulkan_images.cpp  vulkan_images.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_memory_allocator.cpp  vulkan_memory_allocator.h  vulkan_physical_devices.cpp  vulkan_physical_devices.h
im3e/devices/test/: CMakeLists.txt  mock_vulkan_helper.h  mock_vulkan_memory_allocator.cpp  mock_vulkan_memory_allocator.h  test_vulkan_command_buffer.cpp  test_vulkan_command_buffers.cpp  test_vulkan_command_queue.cpp  test_vulkan_debug_message_handler.cpp  test_vulkan_extensions.cpp  test_vulkan_images.cpp  test_vulkan_instance.cpp
im3e/devices/test/integration/: CMakeLists.txt  integration_device.cpp  integration_vulkan_command_buffers.cpp  integration_vulkan_device.cpp  integration_vulkan_images.cpp
im3e/devices/vulkan_loaders/: CMakeLists.txt  vulkan_loaders.h
im3e/devices/vulkan_loaders/mock/: CMakeLists.txt  mock_vulkan_loader.cpp  mock_vulkan_loader.h
im3e/devices/vulkan_loaders/src/: vulkan_library_loader_linux.h  vulkan_loader.cpp  vulkan_loader.h
im3e/devices/vulkan_loaders/test/: test_vulkan_loaders.cpp
im3e/geo/: CMakeLists.txt  geo.h
im3e/geo/src/: gdal_geotiff_height_map.cpp  gdal_geotiff_height_map.h  gdal_geotiff_loader.cpp  gdal_geotiff_loader.h  gdal_instance.cpp  gdal_instance.h  gdal_utils.h  height_map_quad_tree.cpp
im3e/geo/test/: CMakeLists.txt  test_height_map_quad_tree.cpp
im3e/guis/: CMakeLists.txt  guis.h
im3e/guis/src/: glfw_window.cpp  glfw_window.h  glfw_window_application.cpp  glfw_window_application.h  imgui_context.cpp  imgui_context.h  imgui_pipeline.cpp  imgui_pipeline.h  imgui_property_control.cpp  imgui_property_control.h  imgui_property_panel.cpp  imgui_property_panel.h  imgui_render_panel.cpp  imgui_render_panel.h  imgui_stats_panel.cpp  imgui_stats_panel.h  imgui_vulkan_backend.cpp  imgui_vulkan_backend.h  imgui_workspace.cpp  imgui_workspace.h  offscreen_opengl_context.cpp  offscreen_opengl_context.h  presenter.cpp  presenter.h
im3e/guis/test/integration/: CMakeLists.txt  clear_color_test_pipeline.h  integration_glfw_window.cpp  integration_glfw_window_application.cpp  integration_imgui_pipeline.cpp  integration_imgui_render_panel.cpp  integration_imgui_vulkan_backend.cpp
im3e/loggers/: CMakeLists.txt  loggers.h
im3e/loggers/src/: logger_tracker.h  loggers.cpp  stream_logger.cpp  stream_logger.h
im3e/loggers/test/: CMakeLists.txt  test_logger_tracker.cpp  test_loggers.cpp  test_stream_logger_global_tracker.cpp
im3e/mock/: CMakeLists.txt  mock_command_buffer.h  mock_device.h  mock_height_map.h  mock_image.h  mock_logger.h  mock_vulkan_functions.h  mock_vulkan_loader.h
im3e/mock/src/: mock_command_buffer.cpp  mock_device.cpp  mock_height_map.cpp  mock_image.cpp  mock_vulkan_functions.cpp  mock_vulkan_loader.cpp
im3e/resources/: CMakeLists.txt  resources.h.in
im3e/resources/fonts/: CMakeLists.txt
im3e/test_utils/: CMakeLists.txt  device_integration_test.h  glm.h  integration_test.h  pipeline_integration_test.h  std.h  test_utils.h  vk.h
im3e/test_utils/src/: device_integration_test.cpp  glm.cpp  integration_test.cpp  pipeline_integration_test.cpp  vk.cpp
im3e/utils/: CMakeLists.txt  camera_transforms.h  imgui_utils.h  loggers.h  math_utils.h  stats.h  throw_utils.h  transform.h  types.h  view_frustum.h  vk_utils.h
im3e/utils/core/: CMakeLists.txt  platform_utils.h  throw_utils.h  types.h
im3e/utils/core/test/: CMakeLists.txt  test_throw_utils.cpp
im3e/utils/mock/: CMakeLists.txt  mock_logger.h  mock_stats.h
im3e/utils/mock/src/: mock_logger.cpp  mock_stats.cpp
im3e/utils/properties/: CMakeLists.txt  properties.h  property_change_notifier.h
im3e/utils/properties/api/: CMakeLists.txt  property.h
im3e/utils/properties/src/: property_change_notifier.cpp  property_group.cpp  read_only_property_value_proxy.cpp
im3e/utils/properties/test/: CMakeLists.txt  test_iproperty.cpp  test_property.cpp  (+4 more)
im3e/utils/src/: camera_transforms.cpp  platform_utils.cpp  stats_provider.cpp  stream_logger.cpp  stream_logger.h  view_frustum.cpp  vk_utils.cpp
im3e/utils/test/: CMakeLists.txt  test_imgui_utils.cpp  test_logger_tracker.cpp  test_math_utils.cpp  test_stream_logger.cpp  test_stream_logger_global_tracker.cpp  test_throw_utils.cpp  test_transform.cpp  test_types.cpp  test_view_frustum.cpp  test_vk_utils.cpp
im3e/vulkan_loaders/: CMakeLists.txt  vulkan_loaders.h
im3e/vulkan_loaders/src/: vulkan_loader.cpp  vulkan_loader.h
im3e/vulkan_loaders/test/: CMakeLists.txt  test_vulkan_loaders.cpp
resources/proj/: CMakeLists.txt
(+41 files in other folders)
